# fluxemu

./: Cargo.toml  about.toml  clippy.toml  deny.toml  readme.md  rustfmt.toml
.github/workflows/: rust.yml  test.yml
definition/atari2600/: Cargo.toml
definition/atari2600/benches/: bench.rs  emulation.rs  machine_cycle.rs
definition/atari2600/src/: cartridge.rs  lib.rs
definition/atari2600/src/cartridge/: banked.rs  mod.rs  nonbanked.rs
definition/atari2600/src/gamepad/: joystick.rs
definition/atari2600/src/tia/: config.rs  mod.rs
definition/atari2600/src/tia/backend/: mod.rs  software.rs  webgpu.rs
definition/atari2600/src/tia/memory/: read.rs  write.rs
definition/atari2600/src/tia/region/: ntsc.rs  pal.rs  secam.rs
definition/atarilynx/: Cargo.toml
definition/atarilynx/src/: lib.rs  mapctl.rs  suzy.rs
definition/chip8/: Cargo.toml
definition/chip8/src/: audio.rs  lib.rs  timer.rs
definition/chip8/src/display/: mod.rs  software.rs  webgpu.rs
definition/chip8/src/processor/: decoder.rs  input.rs  instruction.rs  interpret.rs  mod.rs
definition/intel8080/: Cargo.toml
definition/memory/: Cargo.toml
definition/memory/benches/: bench.rs
definition/memory/src/: lib.rs  tests.rs
definition/misc/: Cargo.toml
definition/mos6502/: Cargo.toml
definition/mos6502/benches/: bench.rs
definition/mos6502/src/: cycle.rs  handle_phi2.rs  instruction.rs  lib.rs
definition/mos6532/: Cargo.toml
definition/mos6532/src/: lib.rs
definition/nes/: Cargo.toml
definition/nes/benches/: bench.rs  emulation.rs  machine_cycle.rs
definition/nes/src/: lib.rs
definition/nes/src/apu/: mod.rs  pulse.rs
definition/nes/src/cartridge/: mod.rs
definition/nes/src/cartridge/ines/: mod.rs
definition/nes/src/cartridge/mapper/: mmc1.rs  nrom.rs
definition/nes/src/cartridge/mapper/mmc1/: mod.rs  shift.rs
definition/nes/src/gamepad/: controller.rs  mod.rs  standard_controllers.rs
definition/nes/src/ppu/: background.rs  color.rs  mod.rs  oam.rs  pipeline.rs  state.rs  visible_scanlines.rs
definition/nes/src/ppu/backend/: mod.rs  software.rs  webgpu.rs
definition/nes/src/ppu/region/: dendy.rs  mod.rs  ntsc.rs  pal.rs
lib/audio/: Cargo.toml
lib/egui-software-renderer/: Cargo.toml
lib/egui-software-renderer/benches/: egui_software.rs
lib/egui-software-renderer/src/: lib.rs  shapes.rs
lib/egui-software-renderer/src/geometry/: fill.rs  mod.rs  reduce.rs
lib/environment/: Cargo.toml
lib/environment/src/: audio.rs  graphics.rs  input.rs  lib.rs
lib/frontend/: Cargo.toml
lib/frontend/benches/: software_rendering.rs
lib/frontend/locales/: app.toml
lib/frontend/src/: audio_mixer.rs  frontend.rs  graphics.rs  input.rs  lib.rs  machine_factories.rs  machine_thread.rs  platform.rs  settings.rs  toast.rs
lib/frontend/src/audio/: mixer.rs  mod.rs
lib/frontend/src/backend/: audio.rs  graphics.rs
lib/frontend/src/backend/graphics/: mod.rs  software.rs
lib/frontend/src/environment/: gamepad.rs  mod.rs
lib/frontend/src/file_browser/: mod.rs  state.rs
lib/frontend/src/gui/: mod.rs
lib/frontend/src/input/: manage.rs  mod.rs
lib/frontend/src/machine/: factory.rs  mod.rs  simulation_controller.rs
lib/frontend/src/machine/simulation_controller/: mod.rs  thread.rs  ui.rs
lib/graphics/: Cargo.toml
lib/graphics/benches/: egui_software.rs
lib/graphics/src/: lib.rs
lib/graphics/src/api/: mod.rs  webgpu.rs
lib/graphics/src/api/software/: mod.rs  texture.rs
lib/graphics/src/api/software/egui_renderer/: mod.rs  shapes.rs
lib/graphics/src/api/software/texture/: mod.rs  owned.rs  view.rs  view_mut.rs
lib/graphics/src/egui_software_renderer/: mod.rs  pixel_rounds.rs  powerof2.rs  shapes.rs
lib/graphics/src/texture/: mod.rs
lib/input/: Cargo.toml
lib/input/src/: gamepad.rs  (+2 more)
lib/locale/: Cargo.toml  build.rs
lib/program/: Cargo.toml
lib/program/src/: info.rs  lib.rs
lib/program/src/id/: program.rs  rom.rs
lib/program/src/id/machine/: guess.rs  mod.rs
lib/program/src/manager/: mod.rs
lib/range/: Cargo.toml
lib/runtime/: Cargo.toml  readme.md
lib/runtime/benches/: memory.rs
lib/runtime/src/: api.rs  context.rs  event.rs  handle.rs  lib.rs  path.rs  platform.rs  scheduler.rs
lib/runtime/src/component/: config.rs  handle.rs  mod.rs  registry.rs
lib/runtime/src/graphics/: mod.rs
lib/runtime/src/graphics/backend/: mod.rs  software.rs  webgpu.rs
lib/runtime/src/graphics/backend/software/: mod.rs  rgb565.rs  texture.rs
lib/runtime/src/input/: mod.rs  real_gamepad.rs
lib/runtime/src/machine/: graphics.rs  mod.rs  registry.rs
lib/runtime/src/machine/builder/: component.rs  machine.rs  mod.rs
lib/runtime/src/memory/: commit.rs  component.rs  mod.rs  ops.rs  overlapping.rs  read.rs  registry.rs  remap.rs  search.rs  tests.rs  write.rs
lib/runtime/src/memory/remap/: commit.rs  mod.rs
lib/runtime/src/persistence/: codec.rs  mod.rs  save.rs  snapshot.rs
lib/runtime/src/program/: info.rs
lib/runtime/src/program/id/: rom.rs
lib/runtime/src/program/id/machine/: mod.rs
lib/runtime/src/scheduler/: event.rs  mod.rs  sync_point.rs
shell/destinezite/: Cargo.toml  readme.md
shell/destinezite/src/: audio.rs  build_machine.rs  cli.rs  gamepad.rs  main.rs  platform.rs  windowing.rs
shell/destinezite/src/backend/: mod.rs
shell/destinezite/src/backend/software/: mod.rs
shell/destinezite/src/backend/vulkan/: mod.rs
shell/destinezite/src/backend/webgpu/: mod.rs
shell/destinezite/src/backend/webgpu/shader/: normal.wgsl
shell/destinezite/src/display/: mod.rs
shell/destinezite/src/display/software/: drm.rs  mod.rs  windowing.rs
shell/destinezite/src/display/webgpu/: drm.rs  mod.rs  windowing.rs
shell/destinezite/src/display/webgpu/shader/: mod.rs
shell/destinezite/src/event_loop/: mod.rs  windowing.rs
shell/destinezite/src/event_loop/drm/: card.rs  input.rs  mod.rs
shell/destinezite/src/event_loop/windowing/: key.rs  mod.rs
shell/destinezite/src/input/: gamepad.rs  keyboard.rs
utils/: Cargo.toml  readme.md
utils/src/: logiqx.rs  main.rs  redump.rs
utils/src/rom/: export.rs  import.rs
(+15 files in other folders)
