[workspace]
resolver = "3"
members = ["definition/*", "lib/*", "shell/*"]

[workspace.dependencies]
arc-swap = "1.9"
arrayvec = { version = "0.7", features = ["serde"] }
bytemuck = { version = "1.25", features = ["derive"] }
bytes = "1.11"
cfg-if = "1.0"
clap = { version = "4.6", features = ["derive"] }
criterion = "0.8"
data-encoding = "2.10"
egui = "0.34"
fixed = { version = "1", features = ["num-traits", "serde"] }
fluxemu-audio = { path = "lib/audio" }
fluxemu-definition-atari2600 = { path = "definition/atari2600" }
fluxemu-definition-atarilynx = { path = "definition/atarilynx" }
fluxemu-definition-chip8 = { path = "definition/chip8" }
fluxemu-definition-intel8080 = { path = "definition/intel8080" }
fluxemu-definition-memory = { path = "definition/memory" }
fluxemu-definition-mos6502 = { path = "definition/mos6502" }
fluxemu-definition-mos6532 = { path = "definition/mos6532" }
fluxemu-definition-nes = { path = "definition/nes" }
fluxemu-environment = { path = "lib/environment" }
fluxemu-frontend = { path = "lib/frontend" }
fluxemu-input = { path = "lib/input" }
fluxemu-locale = { path = "lib/locale" }
fluxemu-program = { path = "lib/program" }
fluxemu-range = { path = "lib/range" }
fluxemu-runtime = { path = "lib/runtime" }
indexmap = { version = "2.13", features = ["serde"] }
itertools = "0.14"
nalgebra = { version = "0.34", features = [
  "convert-bytemuck",
  "serde-serialize",
] }
num = { version = "0.4", features = ["serde"] }
palette = { version = "0.7", features = ["bytemuck", "named", "serializing"] }
pollster = "0.4"
rand = "0.10"
rangemap = { version = "1.7", features = ["serde1"] }
redb = { version = "3.1", features = ["logging"] }
regex = "1.12"
ringbuffer = "0.16"
rmp-serde = "1.3"
ron = "0.12"
rustc-hash = "2.1"
scc = "3.6"
sealed = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde-inline-default = "1.0"
serde_with = "3.18"
strum = { version = "0.28", features = ["derive"] }
tempfile = "3.27"
thiserror = "2.0"
time = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.22", features = ["serde", "v4"] }
versions = "7.0"
wgpu = "29.0"

[profile.bench]
debug = true

[profile.release]
debug = true
