[workspace]
resolver = "3"
members = ["definition/*", "lib/*", "shell/*", "utils/"]

[workspace.dependencies]
bytemuck = { version = "1.25", features = ["derive"] }
bytes = "1.11"
cfg-if = "1.0"
clap = { version = "4.6", features = ["derive"] }
criterion = "0.8"
data-encoding = "2.11"
egui = "0.34"
fixed = { version = "1", features = ["num-traits", "serde"] }
fluxemu-audio = { path = "lib/audio" }
fluxemu-definition-atari2600 = { path = "definition/atari2600" }
fluxemu-definition-atarilynx = { path = "definition/atarilynx" }
fluxemu-definition-chip8 = { path = "definition/chip8" }
fluxemu-definition-intel8080 = { path = "definition/intel8080" }
fluxemu-definition-mos6502 = { path = "definition/mos6502" }
fluxemu-definition-mos6532 = { path = "definition/mos6532" }
fluxemu-definition-nes = { path = "definition/nes" }
fluxemu-egui-software-renderer = { path = "lib/egui-software-renderer" }
fluxemu-environment = { path = "lib/environment" }
fluxemu-frontend = { path = "lib/frontend" }
fluxemu-graphics = { path = "lib/graphics" }
fluxemu-input = { path = "lib/input" }
fluxemu-locale = { path = "lib/locale" }
fluxemu-program = { path = "lib/program" }
fluxemu-range = { path = "lib/range" }
fluxemu-runtime = { path = "lib/runtime" }
heapless = { version = "0.9", features = ["serde"] }
indexmap = { version = "2.14", features = ["serde"] }
itertools = "0.15"
nalgebra = {
  version = "0.35",
  features = [
    "convert-bytemuck",
    "serde-serialize",
  ]
}
num = { version = "0.4", features = ["serde"] }
palette = { version = "0.7", features = ["bytemuck", "named", "serializing"] }
pollster = "0.4"
rand = "0.10"
rangemap = { version = "1.7", features = ["serde1"] }
rayon = "1.12"
redb = { version = "4.1", features = ["logging"] }
ringbuffer = "0.16"
rmp-serde = "1.3"
ron = "0.12"
rust-i18n = "4.1"
rustc-hash = "2.1"
scc = "3.8"
sdd = { version = "4.8" }
sealed = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde-inline-default = "1.0"
serde_with = "3.20"
strum = { version = "0.28", features = ["derive"] }
tempfile = "3.27"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.23", features = ["rng-rand", "serde", "v4"] }
versions = "7.0"
wgpu = "29.0"

[profile.release]
lto = true
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
