[package]
name = "fluxemu-definition-atari2600"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bench]]
harness = false
name = "emulation"

[dependencies]
bytemuck = { workspace = true }
bytes = { workspace = true }
fluxemu-definition-mos6502 = { workspace = true }
fluxemu-definition-mos6532 = { workspace = true }
fluxemu-graphics = { workspace = true }
fluxemu-input = { workspace = true }
fluxemu-program = { workspace = true }
fluxemu-range = { workspace = true }
fluxemu-runtime = { workspace = true }
itertools = { workspace = true }
nalgebra = { workspace = true }
palette = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true, optional = true }

[target.'cfg(any(target_family = "unix", target_os = "windows"))'.dev-dependencies]
criterion = { workspace = true }
fluxemu-environment = { workspace = true }
redb = { workspace = true }
ron = { workspace = true }

[features]
webgpu = ["dep:wgpu", "fluxemu-graphics/webgpu"]
