[package]
name = "fluxemu-definition-atarilynx"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
fluxemu-definition-memory = { workspace = true }
fluxemu-definition-mos6502 = { workspace = true }
fluxemu-program = { workspace = true }
fluxemu-runtime = { workspace = true }
nalgebra = { workspace = true }
num = { workspace = true }
palette = { workspace = true }
rangemap = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true, optional = true }

[features]
webgpu = ["dep:wgpu", "fluxemu-runtime/webgpu"]
