[package]
name = "fluxemu-definition-atarilynx"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
fluxemu-definition-mos6502 = { workspace = true }
fluxemu-graphics = { workspace = true }
fluxemu-program = { workspace = true }
fluxemu-range = { workspace = true }
fluxemu-runtime = { workspace = true }
nalgebra = { workspace = true }
num = { workspace = true }
palette = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true, optional = true }

[features]
webgpu = ["dep:wgpu", "fluxemu-graphics/webgpu"]
