[package]
name = "fluxemu-definition-memory"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bench]]
harness = false
name = "bench"

[dependencies]
fluxemu-program = { workspace = true }
fluxemu-range = { workspace = true }
fluxemu-runtime = { workspace = true }
rand = { workspace = true }
rangemap = { workspace = true }

[target.'cfg(any(target_family = "unix", target_os = "windows"))'.dev-dependencies]
criterion = { workspace = true }
