[package]
name = "fluxemu-definition-mos6502"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
arrayvec = { workspace = true }
bitvec = { workspace = true }
fluxemu-runtime = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
