[package]
name = "fluxemu-definition-mos6532"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
fluxemu-program = { workspace = true }
fluxemu-range = { workspace = true }
fluxemu-runtime = { workspace = true }
rangemap = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
