[package]
name = "fluxemu-egui-software-renderer"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bench]]
harness = false
name = "egui_software"

[dependencies]
egui = { workspace = true }
fluxemu-graphics = { workspace = true }
fluxemu-range = { workspace = true }
heapless = { workspace = true }
itertools = { workspace = true }
multiversion = "0.8"
nalgebra = { workspace = true }
palette = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }

[target.'cfg(any(target_family = "unix", target_os = "windows"))'.dev-dependencies]
criterion = { workspace = true }
