[package]
name = "fluxemu-environment"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
cfg-if = { workspace = true }
confique = { workspace = true }
dirs = "6.0"
fluxemu-input = { workspace = true }
fluxemu-program = { workspace = true }
fluxemu-runtime = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
