[package]
name = "fluxemu-frontend"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
byte-unit = "5.2"
egui = { workspace = true, features = ["rayon"] }
egui_extras = "0.35"
egui_material_icons = {
  version = "0.7",
  default-features = false,
  features = ["filled"]
}
egui-toast = "0.21"
fluxemu-audio = { workspace = true }
fluxemu-environment = { workspace = true }
fluxemu-graphics = { workspace = true }
fluxemu-input = { workspace = true }
fluxemu-program = { workspace = true }
fluxemu-range = { workspace = true }
fluxemu-runtime = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
nalgebra = { workspace = true }
num = { workspace = true }
palette = { workspace = true }
pollster = { workspace = true }
rfd = { version = "0.17", optional = true }
ringbuffer = { workspace = true }
ron = { workspace = true }
rust-i18n = { workspace = true }
rustc-hash = { workspace = true }
scc = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
sysinfo = "0.39"
tracing = { workspace = true }
uuid = { workspace = true }
versions = { workspace = true }

[features]
external-file-dialog = ["dep:rfd"]
