[package]
name = "fluxemu-graphics"
version = "0.1.0"
edition = "2024"

[[bench]]
harness = false
name = "egui_software"

[dependencies]
egui = { workspace = true }
fluxemu-range = { workspace = true }
heapless = { workspace = true }
itertools = { workspace = true }
multiversion = "0.8"
nalgebra = { workspace = true }
palette = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true, optional = true }

[target.'cfg(any(target_family = "unix", target_os = "windows"))'.dev-dependencies]
criterion = { workspace = true }

[features]
default = ["std"]
std = []
webgpu = ["dep:wgpu"]
