[package]
name = "fluxemu-graphics"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
fluxemu-range = { workspace = true }
heapless = { workspace = true }
itertools = { workspace = true }
nalgebra = { workspace = true }
palette = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true, optional = true }

[features]
default = ["std"]
std = []
webgpu = ["dep:wgpu"]
