[package]
name = "fluxemu-program"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
bytes = { workspace = true }
data-encoding = { workspace = true }
fluxemu-locale = { workspace = true }
fluxemu-range = { workspace = true }
redb = { workspace = true }
rmp-serde = { workspace = true }
ron = { workspace = true }
rustc-hash = { workspace = true }
scc = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
sha1 = "0.10"
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
versions = { workspace = true }

[target.'cfg(any(target_family = "unix", target_os = "windows"))'.dependencies]
memmap2 = "0.9"
