[package]
name = "fluxemu-runtime"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bench]]
harness = false
name = "memory"

[dependencies]
bytes = { workspace = true }
dyn-clone = "1.0"
fixed = { workspace = true }
fluxemu-graphics = { workspace = true }
fluxemu-input = { workspace = true }
fluxemu-program = { workspace = true }
fluxemu-range = { workspace = true }
itertools = { workspace = true }
lz4_flex = "0.13"
nalgebra = { workspace = true }
num = { workspace = true }
rand = { workspace = true }
rangemap = { workspace = true }
redb = { workspace = true }
ringbuffer = { workspace = true }
rmp-serde = { workspace = true }
rustc-hash = { workspace = true }
scc = { workspace = true }
sdd = { version = "4.8" }
sealed = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
smallvec = { version = "2.0.0-alpha.12" }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
versions = { workspace = true }

[target.'cfg(any(target_family = "unix", target_os = "windows"))'.dev-dependencies]
criterion = { workspace = true }

[features]
default = ["std"]
std = ["fluxemu-graphics/std"]
