[package]
name = "fluxemu-shell-destinezite"
version = "0.1.0"
edition = "2024"
description = "Port of the FluxEMU framework to desktop platforms"
license = "GPL-3.0-or-later"

[package.metadata.deb]
maintainer = "Kay <lambdadeltakay@proton.me>"

[dependencies]
bytemuck = { workspace = true }
clap = { workspace = true }
cpal = "0.18"
egui = { workspace = true }
fluxemu-audio = { workspace = true }
fluxemu-definition-atari2600 = { workspace = true }
fluxemu-definition-atarilynx = { workspace = true }
fluxemu-definition-chip8 = { workspace = true }
fluxemu-definition-nes = { workspace = true }
fluxemu-egui-software-renderer = { workspace = true }
fluxemu-environment = { workspace = true }
fluxemu-frontend = { workspace = true }
fluxemu-graphics = { workspace = true }
fluxemu-input = { workspace = true }
fluxemu-program = { workspace = true, features = ["mmap"] }
fluxemu-runtime = { workspace = true }
gilrs = "0.11"
nalgebra = { workspace = true }
palette = { workspace = true }
pollster = { workspace = true }
redb = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

# Webgpu required stuff
egui-wgpu = { version = "0.35", optional = true }
wgpu = { workspace = true, optional = true }

# Windowing required stuff
egui-winit = { version = "0.35", optional = true }
softbuffer = { version = "0.4", optional = true }
winit = { version = "0.30", optional = true }

# DRM required stuff
drm = { version = "0.15", optional = true }
evdev = { version = "0.13", optional = true }
input = { version = "0.10", features = ["log"], optional = true }
libseat = { version = "0.2", optional = true }
nix = { version = "0.31", features = ["event", "poll"], optional = true }
udev = { version = "0.9", optional = true }
xkbcommon = { version = "0.9", optional = true }

[features]
default = ["webgpu", "windowing"]
drm = [
  "dep:drm",
  "dep:evdev",
  "dep:input",
  "dep:libseat",
  "dep:nix",
  "dep:udev",
  "dep:xkbcommon",
]
webgpu = [
  "dep:egui-wgpu",
  "dep:wgpu",
  "fluxemu-definition-atari2600/webgpu",
  "fluxemu-definition-atarilynx/webgpu",
  "fluxemu-definition-chip8/webgpu",
  "fluxemu-definition-nes/webgpu",
  "fluxemu-graphics/webgpu",
]
windowing = [
  "dep:egui-winit",
  "dep:softbuffer",
  "dep:winit",
  "fluxemu-frontend/external-file-dialog"
]
